--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<iframe id="tradingview_7534f" src="https://s.tradingview.com/widgetembed/?frameElementId=tradingview_7534f&amp;symbol=EURUSD&amp;interval=1&amp;hidesidetoolbar=0&amp;symboledit=1&amp;saveimage=0&amp;toolbarbg=rgba(255, 255, 255, 1)&amp;studies=%5B%5D&amp;hideideas=1&amp;theme=White&amp;style=1&amp;timezone=Europe%2FMoscow&amp;studies_overrides=%7B%7D&amp;overrides=%7B%7D&amp;enabled_features=%5B%5D&amp;disabled_features=%5B%5D&amp;locale=pt&amp;utm_source=treid.evo-lution.ru&amp;utm_medium=widget&amp;utm_campaign=chart&amp;utm_term=EURUSD" style="width: 100%; height: 100%; margin: 0 !important; padding: 0 !important;" frameborder="0" allowtransparency="true" scrolling="no" allowfullscreen=""></iframe>
+<!-- TradingView Widget BEGIN -->
+<div class="tradingview-widget-container">
+  <div id="tradingview_63406"></div>
+  <div class="tradingview-widget-copyright"><a href="https://br.tradingview.com/symbols/BTCUSD/?exchange=BITSTAMP" rel="noopener" target="_blank"><span class="blue-text">Gráfico BTCUSD</span></a> por TradingView</div>
+  <script type="text/javascript" src="https://s3.tradingview.com/tv.js"></script>
+  <script type="text/javascript">
+  new TradingView.widget(
+  {
+  "autosize": true,
+  "symbol": "BITSTAMP:BTCUSD",
+  "interval": "W",
+  "timezone": "Etc/UTC",
+  "theme": "dark",
+  "style": "1",
+  "locale": "br",
+  "toolbar_bg": "#f1f3f6",
+  "enable_publishing": false,
+  "allow_symbol_change": true,
+  "container_id": "tradingview_63406"
+}
+  );
+  </script>
+</div>
+<!-- TradingView Widget END -->
